@@ -1276,9 +1276,9 @@ class MachineWithTransitionCallbacksTest < Test::Unit::TestCase
     assert_nothing_raised {@machine.before_transition :invalid => true, :do => lambda {}}
   end
   
-  def test_should_raise_exception_if_do_option_not_specified
+  def test_should_raise_exception_if_method_not_specified
     exception = assert_raise(ArgumentError) {@machine.before_transition :to => :idling}
-    assert_equal ':do callback must be specified', exception.message
+    assert_equal 'Method(s) for callback must be specified', exception.message
   end
   
   def test_should_invoke_callbacks_during_transition
